Name:                tzworld-snap
Version:             0.1
Synopsis:            Web service for finding a time zone by location
Description:         Web service for finding a time zone by location 
License:             AllRightsReserved
Author:              Dan Plubell
Maintainer:          danplubell@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable tzworld-snap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      base                      >= 4     && < 5
    , bytestring                >= 0.9.1 && < 0.11
    , MonadCatchIO-transformers >= 0.2.1 && < 0.4
    , mtl                       >= 2     && < 3
    , snap-core                 >= 0.9   && < 0.10
    , snap-server               >= 0.9   && < 0.10
    , containers                >= 0.5   && < 0.6
    , errors                    >= 1.0   && < 3.0
    , transformers              >= 0.3   && < 0.5            
    , either                    >= 4   && < 5.0    
    , aeson                     >= 0.8   && < 1.0
    , tzworld-api    
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
